# src

./: .gitignore
AXI_Development/IPPExamples/: IPPExamples.sln
AXI_Development/Utilities/: MKLMatrix.hpp  utilities.hpp
Android Projects/Hello/: AndroidManifest.xml
Android Projects/LocationTest/: AndroidManifest.xml
Android Projects/Sudoku/: AndroidManifest.xml
DependencyGraph/: py2depgraph.bat  py2depgraph.py
Fortran_C_CPP/: Makefile  Makefile.ccall  ccall  ccall.c  cmap.cpp  cmdline  cmdline.f  parse.c
IPP Sandbox/: AMD CML 5.3 x86 static.vsprops  AXI Development Utilities.vsprops  IPP Sandbox.sln  Intel IPP 5.1 x64 static.vsprops  Intel IPP 5.1 x86 static.vsprops  Intel IPP 7.1 x64 static.vsprops  Intel MKL 11 x64 sequential static.vsprops  Intel MKL 11 x86 sequential static.vsprops  Intel MKL 11 x86 threaded static.vsprops  Matlib.vsprops
IPP Sandbox/ACML Matrix Multiply/: ACML Matrix Multiply.cpp  ACML Matrix Multiply.sln  ACML Matrix Multiply.vcproj
IPP Sandbox/Convolution/: Convolution.cpp  Convolution.vcproj
IPP Sandbox/Matrix Multiply Comparison/: Matrix Multiply Comparison.cpp  Matrix Multiply Comparison.vcproj
IPP Sandbox/Matrix Transpose/: Matrix Transpose.sln
IPP Sandbox/Remap Example/: Remap Example.cpp  Remap Example.vcproj
ITKBreadboard/Source/: CMakeLists.txt  FilterModel.cpp  FilterModel.h  FilterModel_Test.cpp
Java/: browser.java
Java/ArrayTest/: ArrayTest.html  ArrayTest.jpx  ArrayTest.jpx.local
Java/ButtonArray/: ButtonArray.html  ButtonArray.jpr
Java/DerivedExample/: Base.java  Derived.java  Test.java  test.mak
Java/GUIProcessApp/: GUIProcessApp.html  GUIProcessApp.jpr  GUIProcessApp.jpr.local
Java/NetTools/: netrate.java  tcplisten.java  tcptalk.java  tokchk.java  udplisten.java  udptalk.java
Java/ProcessApp/: ProcessApp.html  ProcessApp.java  ProcessApp.jpr  ProcessApp.jpr.local  ProcessException.java  SystemProgram.java
Java/ProcessTestApp/: ProcessTestApp.java
Java/RegexTest/: RegexTest.html
Java/SimpleExample/: SimpleExample.java
Java/StringTest/: stringtest.java
Julia/: .JuliaFormatter.toml  MyTypes.jl  MyUtils.jl  test.jl
Julia/BlackBoxOptim experiments/: Manifest.toml  ParamDictExample.jl  Project.toml  README.md  repeat_test.jl
Julia/Sandbox/: debugging.ipynb
KDE/: khello  khello.cc  simple  simple.c  simple.cc
KDE/PPPGraph/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  libtool  pppgraph.kdevprj
KDE/PPPGraph/PPPGraph/: Makefile  Makefile.am  Makefile.in  main.cpp  pppgraph.cpp  pppgraph.h  pppgraph.moc.cpp  pppgraphdoc.cpp  pppgraphdoc.h  pppgraphdoc.moc.cpp  pppgraphview.cpp  pppgraphview.h  pppgraphview.moc.cpp  resource.h
KDE/PPPGraph/PPPGraph/.deps/: main.P  pppgraph.P  pppgraph.moc.P  pppgraphdoc.P  pppgraphdoc.moc.P  pppgraphview.P  pppgraphview.moc.P
KDE/PPPGraph/PPPGraph/Docs/: Makefile  Makefile.in
KDE/PPPGraph/PPPGraph/Docs/en/: Makefile  Makefile.am  Makefile.in
LaTex/: HP_PSFeatures.ps  SingleSided.ps  article.tex  basic_article.tex  fibeamer.aux  fibeamer.nav  fibeamer.tex  fibeamer.toc  two_column_figure.tex
LaTex/algorithm/: algorithm_example.tex
LaTex/draftcopy/: draftcopy_example.tex
LaTex/hyperref/: hyperref_example.aux  hyperref_example.tex
LaTex/program/: program-demo.aux  program-demo.toc
Matlab/: capturePoints.m  det_variation_ex.m  det_variation_graph.m  infInvalidPixels.m  loadAllVerificationData.m  loadVerificationRegionUsage.m  rcsheader.m  showVerificationSurf.m  template.m  template_gpl.m  zeroInvalidPixels.m
Matlab/Bench/: fftbench.asv  fftbench.m  mat_perf.m  perfxy.m  perfxyz.m
Matlab/BlurDetection/: blurex1d.m  extractBlur.m  mkblur.m
Matlab/DPDW/: acoustophotonic.m  calib_exp.m  davidtest1.m  dpdw.m  dpdwv2.m  ericrot.m  pmipath.m  readpmidat.m  rmdpdwpaths.m  spie99.m  wintitle.m
Matlab/Denoising/: denoiseStack.m  dwtScaleStats.m  dwtThreshold.m  fourFilt.m  genGallery.m  intDenoise  intDenoise.fig  intDenoise.m  itMedian.m  mkStructuredNoise.m  swtDenoise2.m  swtThreshold.m  truncate  truncate.c  waveDenoise2.m  waveletDenoise
Matlab/DiffEQs/: Computational Electromagnetics Project Proposal.doc  Hlm1D_pntJac.m  Hlm3D_pntJac.m  InfSphere1.0cm.pmi  cauchy_reimann.m  empulse.m  empulse2.m  funky.m  fwdtime1d.m  initconds.mat  jaciter.m  jacitercb.m  jacitereb.m  laplacian.m  lapljac.m  (+6 more)
Mercurial/: .hgtags
Projects/Matrix/BLASMatrixMult-KDEV/BLASMatrixMult/: Makefile  Makefile.am  Makefile.in  blasmatrixmult  main.c
Projects/Matrix/BLASMatrixMult-KDEV/BLASMatrixMult/.deps/: main.P
Projects/Matrix/BLASMatrixMult-KDEV/BLASMatrixMult/Docs/: Makefile  Makefile.in
Projects/Matrix/BLASMatrixMult-KDEV/BLASMatrixMult/Docs/en/: Makefile  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
Projects/VertexSpeedTest/VertexSpeedTest/: Makefile  Makefile.am  Makefile.in  main.cpp  vertexspeedtest
Projects/VertexSpeedTest/VertexSpeedTest/.deps/: main.P
Projects/VertexSpeedTest/VertexSpeedTest/Docs/: Makefile  Makefile.in
Projects/VertexSpeedTest/VertexSpeedTest/Docs/en/: Makefile  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
PyOpenCL Example/: pyOpenCL Example.py
Python/: .project  .pydevproject  GaussianModel.py  all_sharpness.py  gaussian_lmfit_R01355_F13818_L2.txt  imread_check.py  list_sharpness_profiles.py  my_tools.py  parse_ids_from_filename.py  plot_sharpness.py  print_cmd_line.py  print_versions.py  setup.py  simple plot.ipynb
UFW Viewer/: ufw.log.1  ufwlv.py
VisCPP/: commands.txt  shortcuts.txt
bash/: functions.sh  numeric_comparison.sh  template.sh
c/: template.c  vmlimit  vmlimit.c
cpp/: C++BaseModel.xmmd  ClassHighlights.eap  IRP reconstruction region.uml  IRP reconstruction region.umlusc  Metamill Model.xmmd  arrayofpointer  arrayofpointer.cc
itk/ITKExample1/Source/: CMakeLists.txt  ITKExample.cpp
make/: Makefile  conditional.mak  cp_files.mk  mult_targets.mak
perl/: backquote.pl  directory_functions.pl  perltest
(+2743 files in other folders)
