####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = vertexspeedtest
vertexspeedtest_SOURCES = main.cpp 
vertexspeedtest_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = vertexspeedtest

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
vertexspeedtest_LDFLAGS = $(all_libraries) 
                                                                                
