####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = blasmatrixmult
blasmatrixmult_SOURCES = BLASMatrixMult.c main.c 
blasmatrixmult_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.c BLASMatrixMult.c 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = blasmatrixmult

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
blasmatrixmult_LDFLAGS = $(all_libraries) 
                                                                                
